app/assets/stylesheets/custom.sass
.uk-background-black-matte
  background-color: #1b1a1c

.uk-background-black
  background-color: #010101

.uk-card-primary
  background-color: #d96969

.uk-text-white
  color: #fff !important

*
  font-family: "Ubuntu Mono", monospace !important

html
  min-height: 100vh
  background-color: #131219

body
  min-height: 100vh
  background-color: #131219

  &.site
    flex-direction: column
    min-height: 100vh

main.site-container
  flex: 1
  margin-top: 40px

h1, h2, h3, h4, h5, p, small, em, li, a
  color: #fff !important

.title
  color: #d96969 !important

section header
  margin-bottom: 40px

.uk-navbar-nav li a
  font-size: 1.4rem
  color: #fff

.uk-navbar-left a img
  max-height: 4rem

hr
  margin-top: 40px
  margin-bottom: 40px
  border: none
  border-bottom: dashed 2px #ccc

.uk-offcanvas-bar
  padding: 40px 40px
  background-color: #d96969

#hamburger ul li a
  font-size: 1.2rem

.uk-card .uk-card-body
  .uk-card-title
    font-size: 1.7rem !important

  p
    font-size: 1.2rem !important

.avatar
  width: 48px

.uk-text-size-for-avatar
  font-size: 1.2rem

#content-creator
  small
    margin-bottom: 5px

  span
    margin-left: 5px

.content-body,
.description-body
  font-size: 25px


pre
  font: 1.4rem / 1.5 Consolas, monaco, monospace
  font-family: Consolas, monaco, monospace
  overflow: auto
  border: 1px solid #d96969
  background: #282c34
  margin-top: 2rem
  margin-bottom: 2rem

.social-network a
  margin-top: 15px
  margin-right: 5px

/* for block of numbers

.hljs-ln-numbers
  -webkit-touch-callout: none
  -webkit-user-select: none
  -khtml-user-select: none
  -moz-user-select: none
  -ms-user-select: none
  user-select: none
  text-align: center
  color: #ccc
  padding-right: 15px !important

  /* your custom style here

/* for block of code

.hljs-ln-code
  padding-left: 10px

footer
  a
    margin-right: 30px

  img
    width: 100px

